# basicPicoAudioI2S

./: .gitignore  AGENTS.md  AudioEngine.cpp  AudioEngine.h  AudioModule.h  CLAUDE.md  CMakeLists.txt  ControlDefinitions.h  FilterModule.h  Fix15.h  Fix15Oscillators.h  Fix15VCAEnvelopeModule.h  GainModule.h  I2sAudioOutput.h  MidiSerialListener.h  OledDisplay.cpp  OledDisplay.h  Oscillators.h  Parameter.h  ParameterPassing.h  ParameterStore.h  PwmAudioOutput.h  README.md  RotaryEncoder.h  RotaryEncoderListener.h  Sh101StyleSynth.h  SimpleFixedOscModule.h  SimpleReverbModule.h  SimpleSineOscillator.h  SmoothedValue.h  SynthScreens.cpp  SynthScreens.h  VCAEnvelopeModule.h  chocSineModule.cpp  chocSineModule.h  freqModSineModule.cpp  freqModSineModule.h  main.cpp  midiSerialController.html  picoAudioSetup.h  (+2 more)
.runrp2040/: rp2040.run.xml
